--- a/Loginpagestyle.css
+++ b/Loginpagestyle.css
@@ -1,119 +1,134 @@
-body{
-    margin: 0;
-    padding: 0;
-    font-family: montserrat;
-    background: linear-gradient(150deg,#DCC0BE,#000000);
-    height: 100vh;
-    overflow: hidden;
-    
-}
-.center{
-    
-    position: absolute;
-    top:50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
-    width: 400px;
-    background: white;
-    border-radius: 10px;
-}
-.center h1{
- text-align: center;
-    padding: 0 0 20px 0;
-    border-bottom: 1px solid silver;
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap');
+
+*
+{
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+	font-family: 'Poppins', sans-serif;
 }
 
-.center form{
-    
-    padding: 0 100px;
-    box-sizing: border-box;
-    
+body
+{
+	background: linear-gradient(150deg,#DCC0BE,#000000);
+	height: 100vh;
+	overflow: hidden;
 }
 
-form .txt_field{
-    position:relative;
-    border-bottom: 2px solid #adadad;
-    margin: 30px 0;
-    
-}
-.txt_field input{
-    width: 100%;
-    padding:0 5px;
-    height: 40px;
-    font-size: 16px;
-    border: none;
-    background: none;
-    outline: none;
-    
+.center
+{
+	position: absolute;
+	top:50%;
+	left: 50%;
+	transform: translate(-50%,-50%);
+	width: 400px;
+	background: white;
+	border-radius: 10px;
 }
 
-.txt_field label{
-    position: absolute;
-    top: 50%;
-    left: 5px;
-    color: #adadad;
-    transform: translateY(-50%);
-    font-size: 16px;
-    pointer-events: none;
-    transition: .5s;
+.center h1
+{
+	text-align: center;
+	padding: 5px 0 10px 0;
+	border-bottom: 1px solid silver;
 }
 
-.txt_field span::before{
-    content: '';
-    position: absolute;
-    top: 40px;
-    left: 0;
-    width: 100%;
-    height: 2px;
-    background: #000000;
-    transition: .5s;
+.center form
+{
+	padding: 0px 100px 25px 100px;
+	box-sizing: border-box;
+}
+
+form .txt_field
+{
+	position:relative;
+	border-bottom: 2px solid #adadad;
+	margin: 30px 0;
+}
+
+.txt_field input
+{
+	width: 100%;
+	padding:0 5px;
+	height: 40px;
+	font-size: 16px;
+	border: none;
+	background: none;
+	outline: none;
+}
+
+.txt_field label
+{
+	position: absolute;
+	top: 50%;
+	left: 5px;
+	color: #adadad;
+	transform: translateY(-50%);
+	font-size: 16px;
+	pointer-events: none;
+	transition: .5s;
+}
+
+.txt_field span::before
+{
+	content: '';
+	position: absolute;
+	top: 40px;
+	left: 0;
+	width: 100%;
+	height: 2px;
+	background: #000000;
+	transition: .5s;
 }
 
 .txt_field input:focus ~ label,
-.txt_field input:valid ~ label{
-    
-    top: -5px;
-    color: #000000;
-    
+.txt_field input:valid ~ label
+{
+
+	top: -5px;
+	color: #000000;
 }
 
 .txt_field input:focus ~ span::before,
-.txt_field input:valid ~ span::before{
-    
-    width: 100%;
-    
+.txt_field input:valid ~ span::before
+{
+
+	width: 100%;
+
 }
 
+.pass
+{
+	margin: -5px 0 20px 5px;
+	color: #a6a6a6;
+	cursor: pointer;
+}
 
-.pass{
-    margin: -5px 0 20px 5px;
-    color: #a6a6a6;
-    cursor: pointer;
-    
-    
+.pass:hover
+{
+	text-decoration: underline;
+	color: #000000;
 }
-.pass:hover{
-    text-decoration: underline;
-    color: #000000;
+
+input[type = "submit"]
+{
+	width: 100%;
+	height: 50px;
+	border: 1px solid;
+	background: #000000;
+	border-radius: 25px;
+	font-size: 18px;
+	color: #e9f4fb;
+	font-weight: 700;
+	cursor: pointer;
+	outline: none;
 }
-input[type = "submit"]{
-    width: 100%;
-    height: 50px;
-    border: 1px solid;
-    background: #000000;
-    border-radius: 25px;
-    font-size: 18px;
-    color: #e9f4fb;
-    font-weight: 700;
-    cursor: pointer;
-    outline: none;
-    
-}
-input[type = "submit"]:hover{
-    border-color: #FFFFFF;
-    background: #DCC0BE;
-        color:#000000;
-        
-    border-width: -20px;
-    transition: .7s;
+
+input[type = "submit"]:hover
+{
+	border-color: #FFFFFF;
+	background: #DCC0BE;
+	color:#000000;
+	border-width: -20px;
+	transition: .7s;
 }
