--- a/style sheets/stylesheet.css
+++ b/style sheets/stylesheet.css
@@ -1,204 +1,121 @@
 
-			@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
 
-			*
-			{
-				margin: 0;
-				padding: 0;
-				box-sizing: border-box;
-				font-family: 'Poppins', sans-serif;
-			}
-
-			body
-			{
-				margin-top: 70px;
-				background-size: cover;
-				line-height: 1.5;
-				background-color: #E5E5DC;
-			}
-
-			.triangle-left
-			{
-				margin-top: 50px;
-				width: 0;
-				height: 0;
-				border-top: 15px solid transparent;
-				border-right: 25px solid #555;
-				border-bottom: 15px solid transparent;
-			}
-
-			.triangle-up
-			{
-				width: 0;
-				height: 0;
-				border-left: 15px solid transparent;
-				border-right: 15px solid transparent;
-				border-bottom: 25px solid #555;
-			}
-
-			.triangle-right
-			{
-				margin-top: 50px;
-				width: 0;
-				height: 0;
-				border-top: 15px solid transparent;
-				border-left: 25px solid #555;
-				border-bottom: 15px solid transparent;
-			}
-
-			.triangle-down
-			{
-				width: 0;
-				height: 0;
-				border-left: 15px solid transparent;
-				border-right: 15px solid transparent;
-				border-top: 20px solid #555;
-			}
-
-			.pending_cases
-			{
-				width: 60%;
-				transform: translateX(30%);
-				display: flex;
-				flex-direction: row;
-				padding: 25px 0 25px 50px;
-				border-bottom: solid black 2px;
-				border-top: solid black 2px;
-
-			}
-
-			.pending
-			{
-				width: 200px;
-				display: flex;
-				margin: 20px;
-				padding: 50px;
-				background-color: black;
-				opacity: 50%;
-				/*					rgb(114, 145, 97, 0.7);*/
-				color: white;
-				border-radius: 25px;
-			}
-
-			.body
-			{
-				display: flex;
-				flex-direction: row;
-				margin-top: 100px;
-			}
-
-			.recent_cases
-			{
-				width: 350px;
-				display: flex;
-				margin-left: 150px;
-				padding: 50px;
-				background-color: black;
-				opacity: 50%;
-				/*					rgb(114, 145, 97, 0.7);*/
-				color: white;
-				border-radius: 25px;
-			}
-
-			.last_Accessed 
-			{
-				width:500px ;
-				display: flex;
-				margin-left: 150px;
-				padding: 50px;
-				background-color: black;
-				opacity: 50%;
-				/*					rgb(114, 145, 97, 0.7);*/
-				color: white;
-				border-radius: 25px;
-			}
-
-
-
-.center
+*
 {
-	position: absolute;
-	top:50%;
-	left: 50%;
-	transform: translate(-50%,-50%);
-	width: 1000px;
-	background: gray;
-	border-radius: 10px;
-}
-
-.center h1
-{
-	text-align: center;
-	padding: 5px 0 10px 0;
-	border-bottom: 1px solid silver;
-}
-
-.center form
-{
-	padding: 0px 25px 100px;
+	margin: 0;
+	padding: 0;
 	box-sizing: border-box;
-}
-label{
-	position:relative;
-	color:rgb(46, 46, 46);
+	font-family: 'Poppins', sans-serif;
 }
 
-input[type = "text"]
+body
 {
-
-input
-  {
-	margin:5px;
-	position:relative;
-	width:30%;
-	border-radius: 30px;
-	border: none;
-	height:30px;
-	background-color:#adadad;	
+	margin-top: 70px;
+	background-size: cover;
+	line-height: 1.5;
+	background-color: #E5E5DC;
 }
-input[type = "submit"]
+
+.triangle-left
 {
-	width: 30%;
-	height: 50px;
-	border: 1px solid;
-	background: #000000;
+	margin-top: 50px;
+	width: 0;
+	height: 0;
+	border-top: 15px solid transparent;
+	border-right: 25px solid #555;
+	border-bottom: 15px solid transparent;
+}
+
+.triangle-up
+{
+	width: 0;
+	height: 0;
+	border-left: 15px solid transparent;
+	border-right: 15px solid transparent;
+	border-bottom: 25px solid #555;
+}
+
+.triangle-right
+{
+	margin-top: 50px;
+	width: 0;
+	height: 0;
+	border-top: 15px solid transparent;
+	border-left: 25px solid #555;
+	border-bottom: 15px solid transparent;
+}
+
+.triangle-down
+{
+	width: 0;
+	height: 0;
+	border-left: 15px solid transparent;
+	border-right: 15px solid transparent;
+	border-top: 20px solid #555;
+}
+
+.pending_cases
+{
+	width: 60%;
+	transform: translateX(30%);
+	display: flex;
+	flex-direction: row;
+	padding: 25px 0 25px 50px;
+	border-bottom: solid black 2px;
+	border-top: solid black 2px;
+
+}
+
+.pending
+{
+	width: 200px;
+	display: flex;
+	margin: 20px;
+	padding: 50px;
+	background-color: black;
+	opacity: 50%;
+	/*					rgb(114, 145, 97, 0.7);*/
+	color: white;
 	border-radius: 25px;
-	font-size: 18px;
-	color: #e9f4fb;
-	font-weight: 700;
-	cursor: pointer;
-	outline: none;
 }
-  
-select
-  {
-	margin:5px;
-	position:relative;
-	width:30%;
-	border-radius: 30px;
-	border: none;
-	height:30px;
-	background-color:#adadad;
-}
-option{
-	border-radius:30px ;
-	text-align: center;
-}
-input[type = "submit"]:hover
-{
-	border-color: #FFFFFF;
-	background: #adadad;
-	color:#000000;
-	border-width: -20px;
-	transition: .7s;
-}
-textarea
-  {
-	
-	border-radius: 30px;
-	border: none;
-	background-color:#adadad;
 
+.row
+{
+	display: flex;
+	flex-direction: row;
+	margin-top: 100px;
 }
+
+.col
+{
+	display: flex;
+	flex-direction: column;
+	margin-top: 100px;
+}
+.recent_cases
+{
+	width: 350px;
+	display: flex;
+	margin-left: 150px;
+	padding: 50px;
+	background-color: black;
+	opacity: 50%;
+	/*					rgb(114, 145, 97, 0.7);*/
+	color: white;
+	border-radius: 25px;
+}
+
+.last_Accessed 
+{
+	width:500px ;
+	display: flex;
+	margin-left: 150px;
+	padding: 50px;
+	background-color: black;
+	opacity: 50%;
+	/*					rgb(114, 145, 97, 0.7);*/
+	color: white;
+	border-radius: 25px;
 }
 
