--- a/View/style sheets/test.css
+++ b/View/style sheets/test.css
@@ -1,70 +1,81 @@
-	.viewcases
-	{
-		width: fit-content;
-		/* background-color: #1B1717;
-		color: #ffffff;	
-		border-radius: 15px;
-		margin-left: 200px;	
-		font-family: Arial, Helvetica, sans-serif;
-		border-collapse: collapse; */
-	}
-	table
-	{
-		width: 1150px;
-		background-color: #1B1717;
-		color: #ffffff;	
-		border-radius: 15px;
-		margin-left: 200px;	
-		font-family: Arial, Helvetica, sans-serif;
-		border-collapse: collapse;	
-	}
-  
-   td, th
-    {
-		padding: 8px;
-		text-align: center;
-  	}
-	
-	tr :not(:nth-child(0))
-   	{
-	  border-bottom: 1px solid white;
-	  padding-left: 4px;
-	  padding-right: 4px;
-	}	  
-  	
-	tr:hover
-	{
-	   background-color: #630000;
-	}
-	a{
-	color: #ddd;	
-	}
-	
-/* 
- #customers tr:nth-child(even) {
+.viewcases
+{
+	width: 80%; 
+	margin: 10%;	
+	padding-bottom: 20px;
+	margin-top: 75px;
+	border-radius: 15px;
+	background-color: #1B1717;
+	color: #EEEBDD;	
+	font-family: Arial, Helvetica, sans-serif;
+}
 
-	  }
-  */
- 
-   th
-   {
-	   padding-top: 12px;
-	   padding-bottom: 12px;
-	   text-align: center;
-	   background-color: #630000;
-	   color: white;
-  	}
- 	
-	input[type=text]
-  	{
-		margin-bottom:10px;
-		margin-left: 10%;
-		width:80%;
-  	}
- 
-  #myInput
-   {
-	margin-left: 200px;
+.viewcases h2	
+{
+	text-align: center;
+	margin: 10px;
+	padding: 10px;
+}
+
+table
+{
+	width: 100%;
+	border: none;
+	color: #EEEBDD;	
+	font-family: Arial, Helvetica, sans-serif;
+	border-collapse: collapse;	
+}
+
+td, th
+{
+	padding: 8px;
+	text-align: center;
+}
+
+tr :not(:nth-child(0))
+{
+	border-bottom: 1px solid white;
+	padding-left: 4px;
+	padding-right: 4px;
+}	  
+
+a
+{
+	text-decoration: none;
+	color: #EEEBDD;	
+}
+
+tr:hover ~ a:hover
+{
+	color: #1B1717;	
+	text-decoration: none;
+	background-color: #EEEBDD;
+}
+
+/* 
+#customers tr:nth-child(even) {
+
+}
+*/
+
+th
+{
+	padding-top: 12px;
+	padding-bottom: 12px;
+	text-align: center;
+	background-color: #630000;
+	color: white;
+}
+
+input[type=text]
+{
+	margin-bottom:10px;
+	margin-left: 5%;
+	width:90%;
+}
+
+#myInput
+{
 	background-image: url('/css/searchicon.png'); /* Add a search icon to input */
 	background-position: 10px 12px; /* Position the search icon */
 	background-repeat: no-repeat; /* Do not repeat the icon image */
@@ -73,51 +84,52 @@
 	padding: 12px 20px 12px 40px; /* Add some padding */
 	border: 1px solid #ddd; /* Add a grey border */
 	margin-bottom: 12px; /* Add some space below the input */
-  }
-  .view 
-  {
-	  margin-bottom:50px;
-	  width:100%;
-	  height: 200px;
-	  margin-left: 30	0px;
-	  padding: 50px;
-	  background-color: #1B1717;
-	  color: white;
-	  border-radius: 10px;	  
-  }
-  .view2
-  {
-	  
-	  margin-bottom:50px;
-	  width:30%;
-	  height: 200px;
-	  margin-left: 30	0px;
-	  padding: 50px;
-	  background-color: #1B1717;
-	  color: white;
-	  border-radius: 10px;	  
-	  float: left;
-	  width: 50%;
+}
+.view 
+{
+	margin-bottom:50px;
+	width:100%;
+	height: 200px;
+	margin-left: 30	0px;
+	padding: 50px;
+	background-color: #1B1717;
+	color: white;
+	border-radius: 10px;	  
+}
+.view2
+{
 
-	}
-	.row:after {
-		content: "";
-		display: table;
-		clear: both;
-	  }
-	.texth
-  {
+	margin-bottom:50px;
+	width:30%;
+	height: 200px;
+	margin-left: 30	0px;
+	padding: 50px;
+	background-color: #1B1717;
+	color: white;
+	border-radius: 10px;	  
+	float: left;
+	width: 50%;
+
+}
+.row:after
+{
+	content: "";
+	display: table;
+	clear: both;
+}
+.texth
+{
 	font-family: Arial, Helvetica, sans-serif;
 	border-collapse: collapse;
 	width: 100%;
-  
-  }
-  .textd
-  {
-	  margin-left: -25px;
-	  margin-top: 40px;
+
+}
+.textd
+{
+	margin-left: -25px;
+	margin-top: 40px;
 	font-family: Arial, Helvetica, sans-serif;
 	border-collapse: collapse;
 	width: 100%;
-  font-size: xx-large;
-  }
+	font-size: xx-large;
+}
