--- a/View/style sheets/test.css
+++ b/View/style sheets/test.css
@@ -16,7 +16,6 @@
 	margin: 10px;
 	padding: 10px;
 }
-
 table
 {
 	width: 100%;
@@ -79,7 +78,7 @@ input[type=text]
 	background-image: url('/css/searchicon.png'); /* Add a search icon to input */
 	background-position: 10px 12px; /* Position the search icon */
 	background-repeat: no-repeat; /* Do not repeat the icon image */
-	width: 70%; /* Full-width */
+	width: 90%; /* Full-width */
 	font-size: 16px; /* Increase font-size */
 	padding: 12px 20px 12px 40px; /* Add some padding */
 	border: 1px solid #ddd; /* Add a grey border */
@@ -132,4 +131,17 @@ input[type=text]
 	border-collapse: collapse;
 	width: 100%;
 	font-size: xx-large;
+}
+.AddPenaltyButton{
+	background-color: #630000;
+	border-radius: 10px;
+	color: white;	
+}
+.AddPenaltyButton:hover{
+cursor: pointer;
+background-color: white;
+color: black;
+}
+.adminc{
+	margin-top: 150px;
 }
