--- a/View/style sheets/stylesheet.css
+++ b/View/style sheets/stylesheet.css
@@ -1,323 +1,333 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap");
 
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: "Poppins", sans-serif;
+* 
+{
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+	font-family: "Poppins", sans-serif;
 }
 
-body {
-  margin-top: 70px;
-  background-size: cover;
-  line-height: 1.5;
-  background-color: #eeebdd;
+body 
+{
+	margin-top: 70px;
+	background-size: cover;
+	line-height: 1.5;
+	background-color: #eeebdd;
 }
 
-.body {
-  display: flex;
-  flex-direction: row;
-  margin-top: 100px;
+.body 
+{
+	display: flex;
+	flex-direction: row;
+	margin-top: 100px;
 }
 
-.table_row {
-  display: flex;
-  flex-direction: row;
-  padding: 20px;
+
+.table_row 
+{
+	display: flex;
+	flex-direction: row;
+	padding: 20px;
 }
 
-.table_col {
-  display: flex;
-  flex-direction: column;
-  margin: 0 10px 0 10px;
+.table_col 
+{
+	display: flex;
+	flex-direction: column;
+	margin: 0 10px 0 10px;
 }
 
-.table_col label {
-  padding: 20px;
-  padding-left: 0;
-}
-.table_col ol {
-  margin-left: 20px;
-}
-
-.table_col ol li {
-  padding: 20px;
-}
-.triangle-left {
-  margin-top: 150px;
-  width: 0;
-  height: 0;
-  border-top: 15px solid transparent;
-  border-right: 25px solid #555;
-  border-bottom: 15px solid transparent;
+.table_col label 
+{
+	margin: 15px 20px 20px 0px;
+	width: 200px;
+	height: 30px;
 }
 
-.triangle-up {
-  width: 0;
-  height: 0;
-  border-left: 15px solid transparent;
-  border-right: 15px solid transparent;
-  border-bottom: 25px solid #555;
+.table_col input[type="date"],
+.table_col input[type="text"]
+{
+	padding-left: 10px;
+	margin: 15px 20px 20px 0px;
+	width: 150px;
+	border-radius: 30px;
+	border: none;
+	height: 30px;
+	background-color: #eeebdd;
 }
 
-.triangle-right {
-  margin-top: 150px;
-  width: 0;
-  height: 0;
-  border-top: 15px solid transparent;
-  border-left: 25px solid #555;
-  border-bottom: 15px solid transparent;
+.table_col select
+{
+	padding-left: 10px;
+	margin: 15px 20px 20px 0px;
+	width:150px	;
+	border-radius: 30px;
+	border: none;
+	height:30px;
+	background-color:#eeebdd;
+	outline: none;
 }
 
-.triangle-down {
-  width: 0;
-  height: 0;
-  border-left: 15px solid transparent;
-  border-right: 15px solid transparent;
-  border-top: 20px solid #555;
+.table_col option
+{
+	border-radius:30px ;
+	text-align: center;
 }
 
-.pending_cases {
-  width: 80%;
-  margin-top: 25px;
-  margin-left: 10%;
-  display: flex;
-  flex-direction: row;
-  padding: 25px 0px 25px 0px;
-  border-bottom: solid black 2px;
-  border-top: solid black 2px;
+.triangle-left 
+{
+	margin-top: 150px;
+	width: 0;
+	height: 0;
+	border-top: 15px solid transparent;
+	border-right: 25px solid #555;
+	border-bottom: 15px solid transparent;
 }
 
-.card {
-  width: 300px;
-  margin: 20px;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  transition: 0.3s;
-  background-color: #1b1717;
-  color: white;
-  border-radius: 15px;
+.triangle-up 
+{
+	width: 0;
+	height: 0;
+	border-left: 15px solid transparent;
+	border-right: 15px solid transparent;
+	border-bottom: 25px solid #555;
 }
 
-.card img {
-  border-radius: 15px;
-  width: 300px;
-  height: 300px;
-  display: flex;
-}
-.card .card_body {
-  padding: 20px;
-}
-
-.card .card_body h4 {
-  padding: 5px;
-  margin: 3px;
+.triangle-right 
+{
+	margin-top: 150px;
+	width: 0;
+	height: 0;
+	border-top: 15px solid transparent;
+	border-left: 25px solid #555;
+	border-bottom: 15px solid transparent;
 }
 
-.recent_cases {
-  width: 350px;
-  height: 600px;
-  display: flex;
-  margin-left: 200px;
-  padding: 50px;
-  background-color: #1b1717;
-  color: white;
-  border-radius: 25px;
+.triangle-down 
+{
+	width: 0;
+	height: 0;
+	border-left: 15px solid transparent;
+	border-right: 15px solid transparent;
+	border-top: 20px solid #555;
 }
 
-.last_Accessed {
-  margin-bottom: 100px;
-  width: 500px;
-  display: flex;
-  margin-left: 150px;
-  padding: 50px;
-  background-color: #1b1717;
-  color: white;
-  border-radius: 25px;
+.pending_cases 
+{
+	width: 80%;
+	margin-top: 25px;
+	margin-left: 10%;
+	display: flex;
+	flex-direction: row;
+	padding: 25px 0px 25px 0px;
+	border-bottom: solid black 2px;
+	border-top: solid black 2px;
 }
 
-input[type="submit"] {
-  background: #1b1717;
-  float: right;
-  margin: 15px;
-  padding: 3px;
-  padding-left: 10px;
-  padding-right: 10px;
-  border: 2px solid #eeebdd;
-  color: #eeebdd;
-  align-content: center;
-  font-size: 18px;
-  font-weight: 700;
-  border-radius: 15px;
-  cursor: pointer;
-  outline: none;
-}
-.filter {
-  border-radius: 10px;
-  color: #ffffff;
-  background-color: #630000;
-  padding: 20px;
-  margin-left: 250px;
-}
-input[type="submit"]:hover {
-  background: #eeebdd;
-  color: #1b1717;
-  transition: 0.7s;
-}
-.column {
-  float: left;
-  padding: 2px;
-  height: 200px; /* Should be removed. Only for demonstration */
-  margin-left: 125px;
-}
-.row:after {
-  content: "";
-  display: table;
-  clear: both;
+.card 
+{
+	width: 300px;
+	margin: 20px;
+	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+	transition: 0.3s;
+	background-color: #1b1717;
+	color: #eeebdd;
+	border-radius: 15px;
 }
 
-.View_Profile_container {
-  display: flex;
-  flex-direction: row;
-  margin-top: 100px;
+.card img 
+{
+	border-radius: 15px;
+	width: 300px;
+	height: 300px;
+	display: flex;
 }
 
-.View_Profile img{
-  height:200px;
-  margin-left: 60px;
-  margin-top:-60px;
+.card .card_body 
+{
+	padding: 20px;
 }
-.View_Profile {
-  flex-direction: column;
-  width: 60%;
-  margin-left: 20%;
-  padding: 50px;
-  background-color: #1b1717;
-  color: white;
-  border-radius: none;
+
+.card .card_body h4 
+{
+	padding: 5px;
+	margin: 3px;
 }
-.image{
-  height: 200px;
-  Width: 200px;
+
+.view_card 
+{
+	width: 80%;
+	margin-top: 5%;
+	margin-left: 10%;
+	padding: 70px 70px 40px 8%;
+	background-color: #1b1717;
+	color: #eeebdd;
+	border-radius: 15px;
 }
-.View_Profile form {
-  padding: 0px 25px 100px;
-  box-sizing: border-box;
+
+.view_card h1
+{
+	margin-left: 20%;
+	margin-bottom: 20px;
+	width: 600px;
+	text-align: center;
+	padding-bottom: 20px;
+	border-bottom: 1px solid silver;
 }
-.View_Profile h1 {
+
+.last_Accessed 
+{
+	margin-bottom: 100px;
+	width: 500px;
+	display: flex;
+	margin-left: 150px;
+	padding: 50px;
+	background-color: #1b1717;
+	color: #eeebdd;
+	border-radius: 25px;
+}
+
+input[type="submit"] 
+{
+	padding: 5px;
+	background: #1b1717;
+	padding-left: 15px;
+	padding-right: 15px;
+	border: 2px solid #eeebdd;
+	color: #eeebdd;
+	font-size: 18px;
+	font-weight: 700;
+	border-radius: 15px;
+	cursor: pointer;
+	outline: none;
+}
+
+.filter 
+{
+	border-radius: 10px;
+	color: #eeebdd;
+	background-color: #630000;
+	padding: 20px;
+	margin-left: 250px;
+}
+
+input[type="submit"]:hover 
+{
+	border: none;
+	background: #eeebdd;
+	color: #1b1717;
+	transition: 0.7s;
+}
+
+.column 
+{
+	float: left;
+	padding: 2px;
+	height: 200px; /* Should be removed. Only for demonstration */
+	margin-left: 125px;
+}
+
+.row:after 
+{
+	content: "";
+	display: table;
+	clear: both;
+}
+
+.View_Profile_container 
+{
+	display: flex;
+	flex-direction: row;
+	margin-top: 100px;
+}
+
+.View_Profile img
+{
+	height:200px;
+	margin-left: 60px;
+	margin-top:-60px;
+}
+
+.View_Profile 
+{
+	flex-direction: column;
+	width: 60%;
+	margin-left: 20%;
+	padding: 50px;
+	background-color: #1b1717;
+	color: white;
+	border-radius: none;
+}
+
+.image
+{
+	height: 200px;
+	Width: 200px;
+}
+
+.View_Profile form 
+{
+	padding: 0px 25px 100px;
+	box-sizing: border-box;
+}
+
+.View_Profile h1 
+{
 	margin-left: 50px;
 }
 
-.table_row {
-  display: flex;
-  flex-direction: row;
-  padding: 20px;
+
+textarea 
+{
+	padding-left: 10px;
+	margin: 15px 20px 20px 0px;
+	width: 520px;
+	border-radius: 30px;
+	border: none;
+	height: 30px;
+	background-color: #eeebdd;
 }
 
-.table_col {
-  display: flex;
-  flex-direction: column;
-  margin: 0 5px 0 5px;
+.submit 
+{
+	text-align: center;
 }
 
-.table_col label {
-  padding: 20px;
+.addAttachment
+{
+	margin-left: 45px;
+	margin-bottom: 20px;
+	display: flex;
+	flex-direction: column;
 }
 
-.table_col input {
-  margin: 20px;
-  margin-top: 15px;
-  width: 150px;
-  border-radius: 30px;
-  border: none;
-  height: 30px;
-  background-color: #adadad;
+.addAttachment input[type="file"]
+{
+	display: none;
+	background-color:#eeebdd;
+	cursor: pointer;
 }
 
-.submit {
-  margin-top: 50px;
-  text-align: center;
+.addAttachment .attachment_label
+{
+	width: 160px;
+	padding: 7px;
+	color: #1b1717;
+	background-color:#eeebdd;
+	border-radius: 15px;
+	cursor: pointer;
 }
 
-.View_Profile input[type="submit"] {
-  margin: 0 100px 0 120px;
-  width: 170px;
-  padding: 10px;
-  background: #000000;
-  border: 2px solid #e5e5dc;
-  color: #e5e5dc;
-  align-content: center;
-  font-size: 18px;
-  font-weight: 700;
-  border-radius: 25px;
-  cursor: pointer;
-  outline: none;
+.addAttachment .attachment_label:hover
+{
+	transform: scale(1.1);
+	transition: 0.7;
 }
 
-.View_Profile input[type="submit"]:hover {
-  background: #e5e5dc;
-  color: #000000;
-  transition: 0.7s;
-}
-
-.View_Profile select {
-  margin: 20px;
-  margin-top: 15px;
-  width: 150px;
-  border-radius: 30px;
-  border: none;
-  height: 30px;
-  background-color: #adadad;
-  outline: none;
-}
-
-.View_Profile option {
-  border-radius: 30px;
-  text-align: center;
-}
-
-.View_Profile textarea {
-  border-radius: 30px;
-  border: none;
-  background-color: #adadad;
-}
-
-.choose {
-  margin-left: 45px;
-  margin-bottom: 20px;
-  display: flex;
-  flex-direction: column;
-}
-
-.choose input[type="file"] {
-  display: none;
-  padding: 25px;
-  background-color: white;
-  cursor: pointer;
-}
-
-.choose .attachment_label {
-  width: 160px;
-  padding: 7px;
-  color: #000000;
-  background-color: #adadad;
-  border-radius: 25px;
-  cursor: pointer;
-}
-
-.choose .attachment_label:hover {
-  color: #adadad;
-  background-color: black;
-  border: none;
-}
-.column2 {
+.column2 
+{
 	float: left;
 	width: 50%;
 	margin-top: 60px;	
 }
-  
-  /* Clear floats after the columns */
-  .rows:after {
-	content: "";
-	display: table;
-	clear: both;
-  }
