--- a/View/style sheets/stylesheet.css
+++ b/View/style sheets/stylesheet.css
@@ -42,18 +42,26 @@ body
 {
 	margin: 15px 20px 20px 0px;
 	width: 200px;
+	min-width: 150px;
+	height: 30px;
+}
+.table_col div 
+{
+	margin: 15px 20px 20px 0px;
+	width: 200px;
 	height: 30px;
 }
 
 .table_col input[type="date"],
 .table_col input[type="text"]
 {
-	padding-left: 10px;
 	margin: 15px 20px 20px 0px;
-	width: 150px;
-	border-radius: 30px;
-	border: none;
+	width: 200px;
+	min-width: 150px;
 	height: 30px;
+	padding-left: 10px;
+	border: none;
+	border-radius: 20px;
 	background-color: #eeebdd;
 }
 
@@ -140,7 +148,7 @@ body
 {
 	border-radius: 15px;
 	width: 300px;
-	height: 300px;
+	height: 250px;
 	display: flex;
 }
 
@@ -160,7 +168,7 @@ body
 	width: 80%;
 	margin-top: 5%;
 	margin-left: 10%;
-	padding: 70px 70px 40px 8%;
+	padding: 50px 50px 40px 5%;
 	background-color: #1b1717;
 	color: #eeebdd;
 	border-radius: 15px;
@@ -188,6 +196,11 @@ body
 	border-radius: 25px;
 }
 
+.submit 
+{
+	text-align: center;
+}
+
 input[type="submit"] 
 {
 	padding: 5px;
@@ -203,29 +216,45 @@ input[type="submit"]
 	outline: none;
 }
 
-.filter 
-{
-	border-radius: 10px;
-	color: #eeebdd;
-	background-color: #630000;
-	padding: 20px;
-	margin-left: 250px;
-}
-
 input[type="submit"]:hover 
 {
-	border: none;
 	background: #eeebdd;
 	color: #1b1717;
 	transition: 0.7s;
 }
 
+.Filters 
+{
+	width: 70%;
+	margin-top: 25px;
+	margin-left: 15%;
+	text-align: center;
+	display: flex;
+	flex-direction: row;
+	padding: 20px 50px 20px 50px;
+	border-bottom: solid black 2px;
+	border-top: solid black 2px;
+}
+
+.filter
+{
+	padding: 10px;
+	margin-left: 10%;
+	font-weight: 600;
+	color: #1b1717;
+	background-color: #eeebdd;
+	border: 2px solid #1b1717;
+	border-radius: 10px;
+	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.3);
+	outline: none;
+}
+
+
 .column 
 {
 	float: left;
-	padding: 2px;
-	height: 200px; /* Should be removed. Only for demonstration */
-	margin-left: 125px;
+	width: 30%;
+	margin-top: 40px
 }
 
 .row:after 
@@ -235,6 +264,10 @@ input[type="submit"]:hover
 	clear: both;
 }
 
+.row
+{
+	margin-left: 10%;
+}
 .View_Profile_container 
 {
 	display: flex;
@@ -289,15 +322,11 @@ textarea
 	background-color: #eeebdd;
 }
 
-.submit 
-{
-	text-align: center;
-}
 
 .addAttachment
 {
-	margin-left: 45px;
-	margin-bottom: 20px;
+	/*	margin-left: 45px;*/
+	/*	margin-bottom: 20px;*/
 	display: flex;
 	flex-direction: column;
 }
@@ -315,7 +344,7 @@ textarea
 	padding: 7px;
 	color: #1b1717;
 	background-color:#eeebdd;
-	border-radius: 15px;
+	border-radius: 10px;
 	cursor: pointer;
 }
 
