--- a/public/style sheets/stylesheet.css
+++ b/public/style sheets/stylesheet.css
@@ -60,7 +60,8 @@ body
 
 .table_col input[type="date"],
 .table_col input[type="text"],
-.table_col input[type="password"]
+.table_col input[type="password"],
+.table_col input[type="email"]
 {
 	margin: 15px 20px 20px 0px;
 	width: 200px;
